--- a/data/cb_dataset_prep.ipynb
+++ b/data/cb_dataset_prep.ipynb
@@ -461,37 +461,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     {'position_id': 5, 'position': 'Left Center Ba...\n",
-       "1     {'position_id': 24, 'position': 'Left Center F...\n",
-       "2     {'position_id': 15, 'position': 'Left Center M...\n",
-       "3     {'position_id': 1, 'position': 'Goalkeeper', '...\n",
-       "4     {'position_id': 22, 'position': 'Right Center ...\n",
-       "                            ...                        \n",
-       "15    {'position_id': 2, 'position': 'Right Back', '...\n",
-       "16    {'position_id': 1, 'position': 'Goalkeeper', '...\n",
-       "17                                                 None\n",
-       "18                                                 None\n",
-       "19                                                 None\n",
-       "Name: positions, Length: 10860, dtype: object"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lineups[\"positions\"].apply(lambda x: x[0] if len(x) > 0 else None)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [],
@@ -551,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +547,7 @@
        "(3793, 35)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +607,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1619</th>\n",
+       "      <th>1017</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -651,90 +620,42 @@
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>Manchester City WFC</td>\n",
-       "      <td>[e90a6c4e-3d37-49a5-a321-6370d64a7be0]</td>\n",
+       "      <td>[30041b72-609a-4bfb-bb5a-2ee981b8fdbb, 30dca49...</td>\n",
        "      <td>57</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Chelsea FCW</td>\n",
-       "      <td>00:13:57.438</td>\n",
+       "      <td>Manchester City WFC</td>\n",
+       "      <td>00:01:57.793</td>\n",
        "      <td>Ball Receipt*</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1447</th>\n",
+       "      <th>2015</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>{'end_location': [35.0, 41.0]}</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Chelsea FCW</td>\n",
-       "      <td>[17171c16-be0b-4779-b7ea-53033c6c7942]</td>\n",
-       "      <td>18</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chelsea FCW</td>\n",
-       "      <td>00:45:18.980</td>\n",
-       "      <td>Ball Receipt*</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1269</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Chelsea FCW</td>\n",
-       "      <td>[e44814a7-fc72-40a1-99d7-49bc5451b478]</td>\n",
-       "      <td>30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chelsea FCW</td>\n",
-       "      <td>00:27:30.860</td>\n",
-       "      <td>Ball Receipt*</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2978</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.04</td>\n",
+       "      <td>1.213</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>Manchester City WFC</td>\n",
-       "      <td>[9caf68d8-8c73-4cb2-8f96-fa5ceda82fce]</td>\n",
-       "      <td>45</td>\n",
+       "      <td>[c4ca8edd-5be4-4b6e-bfd8-45a1d00656d8, dfe747e...</td>\n",
+       "      <td>27</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Chelsea FCW</td>\n",
-       "      <td>00:42:45.260</td>\n",
-       "      <td>Pressure</td>\n",
+       "      <td>Manchester City WFC</td>\n",
+       "      <td>00:09:27.700</td>\n",
+       "      <td>Carry</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3743</th>\n",
+       "      <th>3388</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -746,15 +667,63 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>Manchester City WFC</td>\n",
-       "      <td>[c67957b8-63c7-49c2-914f-18ff53fc8a57]</td>\n",
-       "      <td>12</td>\n",
+       "      <td>Chelsea FCW</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Chelsea FCW</td>\n",
-       "      <td>00:24:12.411</td>\n",
-       "      <td>Foul Committed</td>\n",
+       "      <td>00:16:34.838</td>\n",
+       "      <td>Ball Recovery</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2316</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'end_location': [68.0, 13.0]}</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.320</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Chelsea FCW</td>\n",
+       "      <td>[09f33b45-e25a-4f4a-a04f-63a530cff412, 9e278a3...</td>\n",
+       "      <td>27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chelsea FCW</td>\n",
+       "      <td>00:43:27.100</td>\n",
+       "      <td>Carry</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>738</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.040</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Chelsea FCW</td>\n",
+       "      <td>[eeb4f585-3ec0-4bee-8ef8-909ee1f8df41]</td>\n",
+       "      <td>47</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chelsea FCW</td>\n",
+       "      <td>00:19:47.998</td>\n",
+       "      <td>Pass</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -763,44 +732,107 @@
        "</div>"
       ],
       "text/plain": [
-       "     bad_behaviour ball_receipt ball_recovery block carry counterpress  \\\n",
-       "1619           NaN          NaN           NaN   NaN   NaN          NaN   \n",
-       "1447           NaN          NaN           NaN   NaN   NaN          NaN   \n",
-       "1269           NaN          NaN           NaN   NaN   NaN          NaN   \n",
-       "2978           NaN          NaN           NaN   NaN   NaN          NaN   \n",
-       "3743           NaN          NaN           NaN   NaN   NaN          NaN   \n",
+       "     bad_behaviour ball_receipt ball_recovery block  \\\n",
+       "1017           NaN          NaN           NaN   NaN   \n",
+       "2015           NaN          NaN           NaN   NaN   \n",
+       "3388           NaN          NaN           NaN   NaN   \n",
+       "2316           NaN          NaN           NaN   NaN   \n",
+       "738            NaN          NaN           NaN   NaN   \n",
        "\n",
-       "     dribble duel  duration foul_committed  ...      possession_team  \\\n",
-       "1619     NaN  NaN       NaN            NaN  ...  Manchester City WFC   \n",
-       "1447     NaN  NaN       NaN            NaN  ...          Chelsea FCW   \n",
-       "1269     NaN  NaN       NaN            NaN  ...          Chelsea FCW   \n",
-       "2978     NaN  NaN      1.04            NaN  ...  Manchester City WFC   \n",
-       "3743     NaN  NaN       NaN            NaN  ...  Manchester City WFC   \n",
+       "                               carry counterpress dribble duel  duration  \\\n",
+       "1017                             NaN          NaN     NaN  NaN       NaN   \n",
+       "2015  {'end_location': [35.0, 41.0]}          NaN     NaN  NaN     1.213   \n",
+       "3388                             NaN          NaN     NaN  NaN       NaN   \n",
+       "2316  {'end_location': [68.0, 13.0]}          NaN     NaN  NaN     4.320   \n",
+       "738                              NaN          NaN     NaN  NaN     1.040   \n",
        "\n",
-       "                              related_events second  shot substitution  \\\n",
-       "1619  [e90a6c4e-3d37-49a5-a321-6370d64a7be0]     57   NaN          NaN   \n",
-       "1447  [17171c16-be0b-4779-b7ea-53033c6c7942]     18   NaN          NaN   \n",
-       "1269  [e44814a7-fc72-40a1-99d7-49bc5451b478]     30   NaN          NaN   \n",
-       "2978  [9caf68d8-8c73-4cb2-8f96-fa5ceda82fce]     45   NaN          NaN   \n",
-       "3743  [c67957b8-63c7-49c2-914f-18ff53fc8a57]     12   NaN          NaN   \n",
+       "     foul_committed  ...      possession_team  \\\n",
+       "1017            NaN  ...  Manchester City WFC   \n",
+       "2015            NaN  ...  Manchester City WFC   \n",
+       "3388            NaN  ...          Chelsea FCW   \n",
+       "2316            NaN  ...          Chelsea FCW   \n",
+       "738             NaN  ...          Chelsea FCW   \n",
        "\n",
-       "     tactics         team     timestamp            type under_pressure  \n",
-       "1619     NaN  Chelsea FCW  00:13:57.438   Ball Receipt*            NaN  \n",
-       "1447     NaN  Chelsea FCW  00:45:18.980   Ball Receipt*            NaN  \n",
-       "1269     NaN  Chelsea FCW  00:27:30.860   Ball Receipt*            NaN  \n",
-       "2978     NaN  Chelsea FCW  00:42:45.260        Pressure            NaN  \n",
-       "3743     NaN  Chelsea FCW  00:24:12.411  Foul Committed            NaN  \n",
+       "                                         related_events second  shot  \\\n",
+       "1017  [30041b72-609a-4bfb-bb5a-2ee981b8fdbb, 30dca49...     57   NaN   \n",
+       "2015  [c4ca8edd-5be4-4b6e-bfd8-45a1d00656d8, dfe747e...     27   NaN   \n",
+       "3388                                                NaN     34   NaN   \n",
+       "2316  [09f33b45-e25a-4f4a-a04f-63a530cff412, 9e278a3...     27   NaN   \n",
+       "738              [eeb4f585-3ec0-4bee-8ef8-909ee1f8df41]     47   NaN   \n",
+       "\n",
+       "     substitution tactics                 team     timestamp           type  \\\n",
+       "1017          NaN     NaN  Manchester City WFC  00:01:57.793  Ball Receipt*   \n",
+       "2015          NaN     NaN  Manchester City WFC  00:09:27.700          Carry   \n",
+       "3388          NaN     NaN          Chelsea FCW  00:16:34.838  Ball Recovery   \n",
+       "2316          NaN     NaN          Chelsea FCW  00:43:27.100          Carry   \n",
+       "738           NaN     NaN          Chelsea FCW  00:19:47.998           Pass   \n",
+       "\n",
+       "     under_pressure  \n",
+       "1017           True  \n",
+       "2015            NaN  \n",
+       "3388            NaN  \n",
+       "2316           True  \n",
+       "738             NaN  \n",
        "\n",
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "events.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['bad_behaviour', 'ball_receipt', 'ball_recovery', 'block', 'carry',\n",
+       "       'counterpress', 'dribble', 'duel', 'duration', 'foul_committed',\n",
+       "       'foul_won', 'goalkeeper', 'id', 'index', 'injury_stoppage',\n",
+       "       'interception', 'location', 'match_id', 'minute', 'pass', 'period',\n",
+       "       'play_pattern', 'player', 'position', 'possession', 'possession_team',\n",
+       "       'related_events', 'second', 'shot', 'substitution', 'tactics', 'team',\n",
+       "       'timestamp', 'type', 'under_pressure'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get shot data\n",
+    "shots = events[events.shot.notnull()]\n",
+    "shots = shots[[\"match_id\", \"id\", \"player\", \"minute\", \"possession_team\", \"shot\"]]\n",
+    "shots[\"xG\"] = shots[\"shot\"].apply(lambda x: x[\"statsbomb_xg\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get possession data\n",
+    "possession = events[[\"match_id\", \"possession_team\", \"duration\", \"type\", \"location\", \"minute\"]]"
    ]
   },
   {
