--- a/data/cb_dataset_prep.ipynb
+++ b/data/cb_dataset_prep.ipynb
@@ -839,7 +839,265 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Clean data"
+    "### 3. Clean data\n",
+    "The clean dataset needs to contain each centre back combination for each game for each team, with which minutes they played and the possession / xG stats for those minutes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>match_id</th>\n",
+       "      <th>possession_team</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>type</th>\n",
+       "      <th>location</th>\n",
+       "      <th>minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2608</th>\n",
+       "      <td>7298</td>\n",
+       "      <td>Manchester City WFC</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>Carry</td>\n",
+       "      <td>[71.0, 9.0]</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1752</th>\n",
+       "      <td>7298</td>\n",
+       "      <td>Manchester City WFC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ball Receipt*</td>\n",
+       "      <td>[76.0, 9.0]</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      match_id      possession_team  duration           type     location  \\\n",
+       "2608      7298  Manchester City WFC      3.24          Carry  [71.0, 9.0]   \n",
+       "1752      7298  Manchester City WFC       NaN  Ball Receipt*  [76.0, 9.0]   \n",
+       "\n",
+       "      minute  \n",
+       "2608      72  \n",
+       "1752      72  "
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "possession.sample(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>player_nickname</th>\n",
+       "      <th>jersey_number</th>\n",
+       "      <th>country</th>\n",
+       "      <th>cards</th>\n",
+       "      <th>positions</th>\n",
+       "      <th>team</th>\n",
+       "      <th>match_id</th>\n",
+       "      <th>position</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>19502</td>\n",
+       "      <td>Meaghan Sargeant</td>\n",
+       "      <td>None</td>\n",
+       "      <td>16</td>\n",
+       "      <td>England</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 3, 'position': 'Right Center ...</td>\n",
+       "      <td>Bristol City WFC</td>\n",
+       "      <td>3775601</td>\n",
+       "      <td>Right Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>88:21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>15717</td>\n",
+       "      <td>Hannah Short</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6</td>\n",
+       "      <td>England</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 3, 'position': 'Right Center ...</td>\n",
+       "      <td>Yeovil Town LFC</td>\n",
+       "      <td>19777</td>\n",
+       "      <td>Right Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    player_id       player_name player_nickname  jersey_number  country cards  \\\n",
+       "8       19502  Meaghan Sargeant            None             16  England    []   \n",
+       "10      15717      Hannah Short            None              6  England    []   \n",
+       "\n",
+       "                                            positions              team  \\\n",
+       "8   [{'position_id': 3, 'position': 'Right Center ...  Bristol City WFC   \n",
+       "10  [{'position_id': 3, 'position': 'Right Center ...   Yeovil Town LFC   \n",
+       "\n",
+       "    match_id           position start_time end_time  \n",
+       "8    3775601  Right Center Back      00:00    88:21  \n",
+       "10     19777  Right Center Back      00:00     None  "
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cb_lineups.sample(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>match_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>player</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>possession_team</th>\n",
+       "      <th>shot</th>\n",
+       "      <th>xG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3535</th>\n",
+       "      <td>7298</td>\n",
+       "      <td>23d74ba8-6e5d-4855-8b3a-81b310e9d35a</td>\n",
+       "      <td>Jill Scott</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Manchester City WFC</td>\n",
+       "      <td>{'statsbomb_xg': 0.08011432, 'end_location': [...</td>\n",
+       "      <td>0.080114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3537</th>\n",
+       "      <td>7298</td>\n",
+       "      <td>ea3833bf-1f02-4fba-9b27-8a1ebc28d732</td>\n",
+       "      <td>Ramona Bachmann</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Chelsea FCW</td>\n",
+       "      <td>{'statsbomb_xg': 0.024449918, 'end_location': ...</td>\n",
+       "      <td>0.024450</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      match_id                                    id           player  minute  \\\n",
+       "3535      7298  23d74ba8-6e5d-4855-8b3a-81b310e9d35a       Jill Scott      26   \n",
+       "3537      7298  ea3833bf-1f02-4fba-9b27-8a1ebc28d732  Ramona Bachmann      39   \n",
+       "\n",
+       "          possession_team                                               shot  \\\n",
+       "3535  Manchester City WFC  {'statsbomb_xg': 0.08011432, 'end_location': [...   \n",
+       "3537          Chelsea FCW  {'statsbomb_xg': 0.024449918, 'end_location': ...   \n",
+       "\n",
+       "            xG  \n",
+       "3535  0.080114  \n",
+       "3537  0.024450  "
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shots.sample(2)"
    ]
   },
   {
