--- a/data/cb_dataset_prep.ipynb
+++ b/data/cb_dataset_prep.ipynb
@@ -845,6 +845,410 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "cb_lineups[\"start_minute\"] = cb_lineups[\"start_time\"].apply(lambda x: int(str(x).split(\":\")[0]))\n",
+    "cb_lineups[\"end_minute\"] = cb_lineups[\"end_time\"].apply(lambda x: int(str(x).split(\":\")[0]) if x is not None else None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>player_nickname</th>\n",
+       "      <th>jersey_number</th>\n",
+       "      <th>country</th>\n",
+       "      <th>cards</th>\n",
+       "      <th>positions</th>\n",
+       "      <th>team</th>\n",
+       "      <th>match_id</th>\n",
+       "      <th>position</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>start_minute</th>\n",
+       "      <th>end_minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4633</td>\n",
+       "      <td>Magdalena Lilly Eriksson</td>\n",
+       "      <td>None</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 5, 'position': 'Left Center B...</td>\n",
+       "      <td>Chelsea FCW</td>\n",
+       "      <td>7298</td>\n",
+       "      <td>Left Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4642</td>\n",
+       "      <td>Millie Bright</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>England</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 3, 'position': 'Right Center ...</td>\n",
+       "      <td>Chelsea FCW</td>\n",
+       "      <td>7298</td>\n",
+       "      <td>Right Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>31:37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   player_id               player_name player_nickname  jersey_number  \\\n",
+       "0       4633  Magdalena Lilly Eriksson            None             16   \n",
+       "5       4642             Millie Bright            None              4   \n",
+       "\n",
+       "   country cards                                          positions  \\\n",
+       "0   Sweden    []  [{'position_id': 5, 'position': 'Left Center B...   \n",
+       "5  England    []  [{'position_id': 3, 'position': 'Right Center ...   \n",
+       "\n",
+       "          team  match_id           position start_time end_time  start_minute  \\\n",
+       "0  Chelsea FCW      7298   Left Center Back      00:00     None             0   \n",
+       "5  Chelsea FCW      7298  Right Center Back      00:00    31:37             0   \n",
+       "\n",
+       "   end_minute  \n",
+       "0         NaN  \n",
+       "5        31.0  "
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cb_lineups.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the lineups for each match first\n",
+    "player_ids = []\n",
+    "starts = []\n",
+    "ends = []\n",
+    "matches = []\n",
+    "teams = []\n",
+    "\n",
+    "# get unique match / team combos\n",
+    "mts = set(list(zip(cb_lineups.match_id.values, cb_lineups.team.values))[:10])\n",
+    "\n",
+    "# loop through match-teams and compute different lineup combinations\n",
+    "for m, t in mts:\n",
+    "    # get basic info / num lineup changes\n",
+    "    match_team_df = cb_lineups[(cb_lineups.match_id == m) & (cb_lineups.team == t)]\n",
+    "    num_lineups = match_team_df[match_team_df.end_minute.notnull()].shape[0] + 1\n",
+    "    matches.extend([m] * num_lineups)\n",
+    "    teams.extend([t] * num_lineups)\n",
+    "    \n",
+    "    # get first lineup\n",
+    "    starts.append(0)\n",
+    "    ends.append(min(match_team_df[\"end_minute\"]))\n",
+    "    player_ids.append(match_team_df[match_team_df.start_minute == 0].player_id.values)\n",
+    "    \n",
+    "    # get subsequent lineups\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7298, 7298, 19771, 19778, 7298, 7298, 19778]"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Manchester City WFC',\n",
+       " 'Manchester City WFC',\n",
+       " 'Birmingham City WFC',\n",
+       " 'Birmingham City WFC',\n",
+       " 'Chelsea FCW',\n",
+       " 'Chelsea FCW',\n",
+       " 'Manchester City WFC']"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([ 4648, 17524]),\n",
+       " array([19502, 19503]),\n",
+       " array([19502, 19503]),\n",
+       " array([4633, 4642, 4657]),\n",
+       " array([10185, 17524])]"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1 = 10\n",
+    "m = list(mts)[m1][0]\n",
+    "t = list(mts)[m1][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match_team_df = cb_lineups[(cb_lineups.match_id == m) & (cb_lineups.team == t)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match_team_df[match_team_df.end_minute.notnull()].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>player_nickname</th>\n",
+       "      <th>jersey_number</th>\n",
+       "      <th>country</th>\n",
+       "      <th>cards</th>\n",
+       "      <th>positions</th>\n",
+       "      <th>team</th>\n",
+       "      <th>match_id</th>\n",
+       "      <th>position</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>start_minute</th>\n",
+       "      <th>end_minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15618</td>\n",
+       "      <td>Jasmine Matthews</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>England</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 4, 'position': 'Center Back',...</td>\n",
+       "      <td>Bristol City WFC</td>\n",
+       "      <td>3775625</td>\n",
+       "      <td>Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>24922</td>\n",
+       "      <td>Florence Allen</td>\n",
+       "      <td>None</td>\n",
+       "      <td>12</td>\n",
+       "      <td>England</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 3, 'position': 'Right Center ...</td>\n",
+       "      <td>Bristol City WFC</td>\n",
+       "      <td>3775625</td>\n",
+       "      <td>Right Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>46741</td>\n",
+       "      <td>Naomi Layzell</td>\n",
+       "      <td>None</td>\n",
+       "      <td>25</td>\n",
+       "      <td>England</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 5, 'position': 'Left Center B...</td>\n",
+       "      <td>Bristol City WFC</td>\n",
+       "      <td>3775625</td>\n",
+       "      <td>Left Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    player_id       player_name player_nickname  jersey_number  country cards  \\\n",
+       "1       15618  Jasmine Matthews            None              4  England    []   \n",
+       "6       24922    Florence Allen            None             12  England    []   \n",
+       "13      46741     Naomi Layzell            None             25  England    []   \n",
+       "\n",
+       "                                            positions              team  \\\n",
+       "1   [{'position_id': 4, 'position': 'Center Back',...  Bristol City WFC   \n",
+       "6   [{'position_id': 3, 'position': 'Right Center ...  Bristol City WFC   \n",
+       "13  [{'position_id': 5, 'position': 'Left Center B...  Bristol City WFC   \n",
+       "\n",
+       "    match_id           position start_time end_time  start_minute  end_minute  \n",
+       "1    3775625        Center Back      00:00     None             0         NaN  \n",
+       "6    3775625  Right Center Back      00:00     None             0         NaN  \n",
+       "13   3775625   Left Center Back      00:00     None             0         NaN  "
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match_team_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
    "outputs": [
@@ -921,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -962,59 +1366,113 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>19502</td>\n",
-       "      <td>Meaghan Sargeant</td>\n",
-       "      <td>None</td>\n",
-       "      <td>16</td>\n",
-       "      <td>England</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'position_id': 3, 'position': 'Right Center ...</td>\n",
-       "      <td>Bristol City WFC</td>\n",
-       "      <td>3775601</td>\n",
-       "      <td>Right Center Back</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>88:21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>15717</td>\n",
-       "      <td>Hannah Short</td>\n",
+       "      <td>10185</td>\n",
+       "      <td>Stephanie Houghton</td>\n",
        "      <td>None</td>\n",
        "      <td>6</td>\n",
        "      <td>England</td>\n",
        "      <td>[]</td>\n",
        "      <td>[{'position_id': 3, 'position': 'Right Center ...</td>\n",
-       "      <td>Yeovil Town LFC</td>\n",
-       "      <td>19777</td>\n",
+       "      <td>Manchester City WFC</td>\n",
+       "      <td>2275092</td>\n",
        "      <td>Right Center Back</td>\n",
        "      <td>00:00</td>\n",
        "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>15554</td>\n",
+       "      <td>Gemma Bonner</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>England</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 5, 'position': 'Left Center B...</td>\n",
+       "      <td>Manchester City WFC</td>\n",
+       "      <td>2275092</td>\n",
+       "      <td>Left Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15569</td>\n",
+       "      <td>Kerys Harrop</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6</td>\n",
+       "      <td>England</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 5, 'position': 'Left Center B...</td>\n",
+       "      <td>Birmingham City WFC</td>\n",
+       "      <td>2275092</td>\n",
+       "      <td>Left Center Back</td>\n",
+       "      <td>74:11</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>19592</td>\n",
+       "      <td>Harriet Scott</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 3, 'position': 'Right Center ...</td>\n",
+       "      <td>Birmingham City WFC</td>\n",
+       "      <td>2275092</td>\n",
+       "      <td>Right Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>31568</td>\n",
+       "      <td>Rebecca Holloway</td>\n",
+       "      <td>None</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Northern Ireland</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[{'position_id': 5, 'position': 'Left Center B...</td>\n",
+       "      <td>Birmingham City WFC</td>\n",
+       "      <td>2275092</td>\n",
+       "      <td>Left Center Back</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>74:11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    player_id       player_name player_nickname  jersey_number  country cards  \\\n",
-       "8       19502  Meaghan Sargeant            None             16  England    []   \n",
-       "10      15717      Hannah Short            None              6  England    []   \n",
+       "    player_id         player_name player_nickname  jersey_number  \\\n",
+       "8       10185  Stephanie Houghton            None              6   \n",
+       "10      15554        Gemma Bonner            None              4   \n",
+       "2       15569        Kerys Harrop            None              6   \n",
+       "7       19592       Harriet Scott            None              3   \n",
+       "13      31568    Rebecca Holloway            None             25   \n",
        "\n",
-       "                                            positions              team  \\\n",
-       "8   [{'position_id': 3, 'position': 'Right Center ...  Bristol City WFC   \n",
-       "10  [{'position_id': 3, 'position': 'Right Center ...   Yeovil Town LFC   \n",
+       "             country cards                                          positions  \\\n",
+       "8            England    []  [{'position_id': 3, 'position': 'Right Center ...   \n",
+       "10           England    []  [{'position_id': 5, 'position': 'Left Center B...   \n",
+       "2            England    []  [{'position_id': 5, 'position': 'Left Center B...   \n",
+       "7            Ireland    []  [{'position_id': 3, 'position': 'Right Center ...   \n",
+       "13  Northern Ireland    []  [{'position_id': 5, 'position': 'Left Center B...   \n",
        "\n",
-       "    match_id           position start_time end_time  \n",
-       "8    3775601  Right Center Back      00:00    88:21  \n",
-       "10     19777  Right Center Back      00:00     None  "
+       "                   team  match_id           position start_time end_time  \n",
+       "8   Manchester City WFC   2275092  Right Center Back      00:00     None  \n",
+       "10  Manchester City WFC   2275092   Left Center Back      00:00     None  \n",
+       "2   Birmingham City WFC   2275092   Left Center Back      74:11     None  \n",
+       "7   Birmingham City WFC   2275092  Right Center Back      00:00     None  \n",
+       "13  Birmingham City WFC   2275092   Left Center Back      00:00    74:11  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cb_lineups.sample(2)"
+    "cb_lineups[cb_lineups.match_id == match_ids[132]]"
    ]
   },
   {
