--- a/data/cb_dataset_prep.ipynb
+++ b/data/cb_dataset_prep.ipynb
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +994,7 @@
     "teams = []\n",
     "\n",
     "# get unique match / team combos\n",
-    "mts = set(list(zip(cb_lineups.match_id.values, cb_lineups.team.values))[:10])\n",
+    "mts = set(list(zip(cb_lineups.match_id.values, cb_lineups.team.values))[:20])\n",
     "\n",
     "# loop through match-teams and compute different lineup combinations\n",
     "for m, t in mts:\n",
@@ -1007,35 +1007,28 @@
     "    # get first lineup\n",
     "    starts.append(0)\n",
     "    ends.append(min(match_team_df[\"end_minute\"]))\n",
-    "    player_ids.append(match_team_df[match_team_df.start_minute == 0].player_id.values)\n",
+    "    current_lineup = list(match_team_df[match_team_df.start_minute == 0].player_id.values)\n",
+    "    player_ids.append(current_lineup)\n",
     "    \n",
     "    # get subsequent lineups\n",
-    "    "
+    "    if num_lineups != 1:\n",
+    "        change_starts = [x for x in match_team_df.start_minute.values if x != 0]\n",
+    "        change_ends = [x for x in match_team_df.end_minute.values if x is not None]\n",
+    "        changes = change_starts.append(change_ends)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 216,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[7298, 7298, 19771, 19778, 7298, 7298, 19778]"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "matches"
+    "changes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -1044,13 +1037,20 @@
        "['Manchester City WFC',\n",
        " 'Manchester City WFC',\n",
        " 'Birmingham City WFC',\n",
+       " 'Chelsea FCW',\n",
+       " 'Arsenal WFC',\n",
        " 'Birmingham City WFC',\n",
+       " 'Yeovil Town LFC',\n",
+       " 'Yeovil Town LFC',\n",
+       " 'Yeovil Town LFC',\n",
        " 'Chelsea FCW',\n",
        " 'Chelsea FCW',\n",
+       " 'Yeovil Town LFC',\n",
+       " 'Brighton & Hove Albion WFC',\n",
        " 'Manchester City WFC']"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,20 +1061,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([ 4648, 17524]),\n",
-       " array([19502, 19503]),\n",
-       " array([19502, 19503]),\n",
-       " array([4633, 4642, 4657]),\n",
-       " array([10185, 17524])]"
+       "[[4648, 17524],\n",
+       " [19502, 19503],\n",
+       " [4633, 4642],\n",
+       " [10666, 18999],\n",
+       " [19502, 19503],\n",
+       " [15715, 15717],\n",
+       " [4633, 4642, 4657],\n",
+       " [15712, 15717],\n",
+       " [16394, 16395],\n",
+       " [10185, 17524]]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,9 +1090,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 219,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[33.0, nan, nan, nan, nan, 4.0, nan, nan, nan, nan]"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-207-feccc5f2061d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mm1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mm1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mm1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "m1 = 10\n",
     "m = list(mts)[m1][0]\n",
