--- a/data/cb_dataset_prep.ipynb
+++ b/data/cb_dataset_prep.ipynb
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,18 +1012,49 @@
     "    \n",
     "    # get subsequent lineups\n",
     "    if num_lineups != 1:\n",
-    "        change_starts = [x for x in match_team_df.start_minute.values if x != 0]\n",
-    "        change_ends = [x for x in match_team_df.end_minute.values if x is not None]\n",
-    "        changes = change_starts.append(change_ends)"
+    "        changes = [x for x in match_team_df.start_minute.values if x > 0]\n",
+    "        change_ends = [x for x in match_team_df.end_minute.values if x > 0]\n",
+    "        changes.extend(change_ends)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 241,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[31.0]"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[nan, 31.0, nan]"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "change_ends"
    ]
   },
   {
