--- a/data/cb_dataset_prep.ipynb
+++ b/data/cb_dataset_prep.ipynb
@@ -1194,7 +1194,7 @@
    "id": "83b7c95d",
    "metadata": {},
    "source": [
-    "#### b) Add xG data"
+    "#### c) Add xG data"
    ]
   },
   {
@@ -1225,94 +1225,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1adde17",
+   "cell_type": "markdown",
+   "id": "258ab2a6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Save extract"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 112,
+   "id": "3ee73c04",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>match_id</th>\n",
-       "      <th>id</th>\n",
-       "      <th>player</th>\n",
-       "      <th>minute</th>\n",
-       "      <th>possession_team</th>\n",
-       "      <th>shot</th>\n",
-       "      <th>xG</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3532</th>\n",
-       "      <td>7298</td>\n",
-       "      <td>13933d30-56e3-4900-b942-0ee01af8ed1f</td>\n",
-       "      <td>So-Yun Ji</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Chelsea FCW</td>\n",
-       "      <td>{'statsbomb_xg': 0.17090812, 'end_location': [...</td>\n",
-       "      <td>0.170908</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3527</th>\n",
-       "      <td>7298</td>\n",
-       "      <td>5e58cab7-75c2-47f8-903c-2874de6ed5b0</td>\n",
-       "      <td>So-Yun Ji</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Chelsea FCW</td>\n",
-       "      <td>{'statsbomb_xg': 0.014543258, 'end_location': ...</td>\n",
-       "      <td>0.014543</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      match_id                                    id     player  minute  \\\n",
-       "3532      7298  13933d30-56e3-4900-b942-0ee01af8ed1f  So-Yun Ji      23   \n",
-       "3527      7298  5e58cab7-75c2-47f8-903c-2874de6ed5b0  So-Yun Ji       5   \n",
-       "\n",
-       "     possession_team                                               shot  \\\n",
-       "3532     Chelsea FCW  {'statsbomb_xg': 0.17090812, 'end_location': [...   \n",
-       "3527     Chelsea FCW  {'statsbomb_xg': 0.014543258, 'end_location': ...   \n",
-       "\n",
-       "            xG  \n",
-       "3532  0.170908  \n",
-       "3527  0.014543  "
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "shots.sample(2)"
+    "lineups.to_csv(\"sample_extract.csv\")"
    ]
   }
  ],
